Updated to api v0.6.0
