# manager/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 
 info:
   description: The API of Deployment Tool (Manager)
-  version: "0.5.0"
+  version: "0.6.0"
   title: Deployment Tool REST API
   contact:
     name: Source Code
@@ -14,8 +14,11 @@ tags:
   - name: orders
     description: Managing deployment orders
   - name: targets
-    description: Managing targets
+    description: Retrieving targets (devices)
+  - name: logs
+    description: Retrieving logs
 paths:
+  # ORDERS #####
   /orders:
     post:
       tags:
@@ -40,15 +43,23 @@ paths:
       tags:
         - orders
       summary: retrieves list of orders
+      parameters:
+        - $ref: "#/components/parameters/page"
+        - $ref: "#/components/parameters/perPage"
       responses:
         '200':
           description: success response
           content:
             application/json:
               schema:
-                type: object
-                additionalProperties:
-                  $ref: '#/components/schemas/Order'
+                allOf:
+                  - $ref: "#/components/schemas/List"
+                  - type: object
+                    properties:
+                      items:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Order'
   /orders/{id}:
     parameters:
       - in: path
@@ -71,21 +82,36 @@ paths:
                 $ref: '#/components/schemas/Order'
         '404':
           description: not found
+  # TARGETS #####
   /targets:
     get:
       tags:
         - targets
       summary: retrieves list of targets
+      parameters:
+        - in: query
+          name: tags
+          schema:
+            type: string
+          description: Tags separated by commas
+          example: dev,arm
+        - $ref: "#/components/parameters/page"
+        - $ref: "#/components/parameters/perPage"
       responses:
         '200':
           description: success response
           content:
             application/json:
               schema:
-                type: object
-                additionalProperties:
-                  $ref: '#/components/schemas/Target'
-  #    post:
+                allOf:
+                  - $ref: "#/components/schemas/List"
+                  - type: object
+                    properties:
+                      items:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Target'
+
   /targets/{id}:
     parameters:
       - in: path
@@ -108,15 +134,63 @@ paths:
                 $ref: '#/components/schemas/Target'
         '404':
           description: not found
-#    put:
+  # LOGS #####
+  /logs:
+    get:
+      tags:
+        - logs
+      summary: retrieves list of logs
+      parameters:
+        - in: query
+          name: target
+          schema:
+            type: string
+          description: Target ID
+        - in: query
+          name: task
+          schema:
+            type: string
+          description: Task ID
+        - in: query
+          name: stage
+          schema:
+            type: string
+          description: Stage name
+        - in: query
+          name: command
+          schema:
+            type: string
+          description: Command
+        - in: query
+          name: sortBy
+          required: false
+          schema:
+            type: string
+            enum: [time,target,task,stage,command]
+          description: The field that items should be sorted by
+        - $ref: "#/components/parameters/sortOrder"
+        - $ref: "#/components/parameters/page"
+        - $ref: "#/components/parameters/perPage"
+      responses:
+        '200':
+          description: success response
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/List"
+                  - type: object
+                    properties:
+                      items:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Log'
+
 components:
   schemas:
     Order:
       title: Order
       type: object
-      required:
-        - stages
-        - target
       properties:
         id:
           type: string
@@ -168,7 +242,7 @@ components:
                   items:
                     type: string
                     example: "chmod +x app"
-            launch:
+            run:
               type: object
               properties:
                 commands:
@@ -194,59 +268,85 @@ components:
           description: Whether the device should send all standard output (true) or just status info
           type: boolean
           default: false
-        created:
+        createdAt:
           type: integer
           format: int64
           readOnly: true
-        childOrder:
-          description: The ID of child order generated for deployment of packages
-          type: string
-          readOnly: true
+          example: 1546304461000
 
     Target:
       title: Target
       type: object
       properties:
+        id:
+          type: string
         tags:
           type: array
           items:
             type: string
-        logs:
-          type: object
-          additionalProperties:
-            type: object
-            properties:
-              transfer:
-                type: object
-                additionalProperties:
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/stageLog'
-              install:
-                type: object
-                additionalProperties:
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/stageLog'
-              run:
-                type: object
-                additionalProperties:
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/stageLog'
-              updated:
-                type: integer
-                format: int64
-                readOnly: true
-    stageLog:
-      title: Stage Log
+        updatedAt:
+          type: integer
+          format: int64
+          readOnly: true
+          example: 1546304461000
+    Log:
+      title: Log
       type: object
       properties:
         time:
           type: integer
           format: int64
+          example: 1546304461000
+        target:
+          type: string
+        task:
+          type: string
+        stage:
+          type: string
+        command:
+          type: string
         output:
           type: string
         error:
           type: boolean
           default: false
+    List:
+      title: List
+      type: object
+      properties:
+        total:
+          type: integer
+          example: 10
+        page:
+          type: integer
+          example: 1
+        perPage:
+          type: integer
+          example: 1
+  parameters:
+    page:
+      in: query
+      name: page
+      required: false
+      schema:
+        type: integer
+        minimum: 1
+        default: 1
+      description: The page that should be retrieved
+    perPage:
+      in: query
+      name: perPage
+      required: false
+      schema:
+        type: integer
+        minimum: 1
+        default: 100
+      description: The number of items in every page
+    sortOrder:
+      in: query
+      name: sortOrder
+      required: false
+      schema:
+        type: string
+        enum: [asc, desc]
+      description: The sorting order
